fix: top and left spacing for many forms

--- a/styles/addorder.css
+++ b/styles/addorder.css
@@ -68,8 +68,6 @@
 
 .addorder,
 .memberinfo {
-  padding-top: 4rem;
-  margin: auto;
   width: fit-content;
 }
 
