--- a/styles/global.css
+++ b/styles/global.css
@@ -52,5 +52,5 @@ button {
 }
 
 main {
-  margin-left: 13.5rem;
+  padding: 3rem 0 0 22.5rem;
 }
