--- a/styles/salesReport.css
+++ b/styles/salesReport.css
@@ -5,8 +5,6 @@
     flex-direction: column;
     gap: 24px;
     position: absolute;
-    padding-left: 145px;
-    padding-top: 48px;
 }
 
 .salesReport h1 {
